test/bad/sec_loop.subst
{"functions":[{"paramSecrecy":[false],"returnSecrecy":[false],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36}
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36} 